--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,14 @@ source = yatiml
 testpaths = tests
 addopts = --cov --cov-report xml --cov-report term-missing --cov-report html
 
+[mypy]
+python_version = 3.4
+disallow_incomplete_defs = True
+disallow_untyped_defs = True
+
+[mypy-ruamel.*]
+ignore_missing_imports=True
+
 # Define `python setup.py build_sphinx`
 [build_sphinx]
 source-dir = docs
