--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ source = yatiml
 
 [tool:pytest]
 testpaths = tests
-addopts = --cov --cov-report xml --cov-report term-missing --cov-report html
+addopts = --flake8 --cov --cov-report xml --cov-report term-missing --cov-report html
 
 [mypy]
 python_version = 3.4
