--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
   - "3.5"
   - "3.6"
 
+# Travis comes with an old pytest that does not work with pytest-flake8.
+# So upgrade that first.
+before_install:
+  - pip install --upgrade pytest
 # command to install dependencies
 install:
   - pip install -r requirements.txt
