Add support for loading user-defined classes
Also various fixes, and removed the make_loader() construction with
explicit Loader classes made by the user. It's not as nice, but the
PyYAML architecture forces us into this corner.

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,13 @@ disallow_untyped_defs = True
 [mypy-ruamel.*]
 ignore_missing_imports=True
 
+[mypy-pytest.*]
+ignore_missing_imports=True
+
+[mypy-tests.*]
+disallow_untyped_defs=False
+disallow_untyped_calls=False
+
 # Define `python setup.py build_sphinx`
 [build_sphinx]
 source-dir = docs
