--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,7 @@ install:
 
 # command to run tests
 script: python setup.py test
+
+# upload coverage information to Codacy
+after_success:
+  - python-codacy-coverage -r coverage.xml
