--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install codacy-coverage
 
 # command to run tests
 script: python setup.py test
