--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ description-file = README.md
 
 [aliases]
 # Define `python setup.py test`
-test=pytest
+test = pytest
 
 [coverage:run]
 branch = True
@@ -11,7 +11,7 @@ source = yatiml
 
 [tool:pytest]
 testpaths = tests
-addopts = --flake8 --cov --cov-report xml --cov-report term-missing --cov-report html
+addopts = --mypy --flake8 --cov --cov-report xml --cov-report term-missing --cov-report html
 
 [mypy]
 python_version = 3.4
