Improve test running and fix Flake8 issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ branch = True
 source = yatiml
 
 [tool:pytest]
-testpaths = tests
+testpaths = tests yatiml
 addopts = --mypy --flake8 --cov --cov-report xml --cov-report term-missing --cov-report html
 
 [mypy]
