--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     - name: Run the test suite
       run: |
         cd $GITHUB_WORKSPACE
-        python setup.py test
+        python3 setup.py test
 
     - name: Upload coverage report to Codacy
       uses: codacy/codacy-coverage-reporter-action@master
