Try to fix CI, install dependencies

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ jobs:
     - name: Run the test suite
       run: |
         cd $GITHUB_WORKSPACE
+        pip3 install pip setuptools wheel
         python3 setup.py test
 
     - name: Upload coverage report to Codacy
