Enable warn_return_any for mypy and fix errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ addopts = --mypy --flake8 --cov --cov-report xml --cov-report term-missing --cov
 python_version = 3.5
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
+warn_return_any = True
 
 [mypy-ruamel.*]
 ignore_missing_imports=True
