--- a/.github/workflows/ci_python3.7.yaml
+++ b/.github/workflows/ci_python3.7.yaml
@@ -16,4 +16,4 @@ jobs:
         key: python-compatibility-3.7-eggs
 
     - name: Run tests on 3.7 latest
-      run: docker run -v "${GITHUB_WORKSPACE}:/home/yatiml" python:3.7 /bin/bash -c 'cd /home/yatiml && pip install -U pip setuptools wheel && python setup.py test'
+      run: docker run -v "${GITHUB_WORKSPACE}:/home/yatiml" python:3.7 /bin/bash -c 'cd /home/yatiml && pip install -U pip setuptools wheel ruamel.yaml==0.16.12 && python setup.py test'
