--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = py36, py37, py38, py39
+skip_missing_interpreters = true
 
 [testenv]
 deps =
@@ -22,4 +23,13 @@ python =
 
 [pycodestyle]
 max-doc-length = 80
+
+[testenv:docs]
+description = Build documentation using Sphinx
+basepython = python3
+deps =
+    recommonmark
+    sphinx
+    sphinx_rtd_theme
+commands = sphinx-build docs docs/_build -bhtml
 
