Automatically validate CITATION.cff and update to new version

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ skip_missing_interpreters = true
 
 [testenv]
 deps =
+    cffconvert
     mypy
     pycodestyle
     pytest
@@ -13,6 +14,7 @@ commands =
     mypy
     pytest
     pycodestyle yatiml tests
+    cffconvert --validate
 
 [gh-actions]
 python =
