Add error message readability test mode

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,17 @@ python =
 [pycodestyle]
 max-doc-length = 80
 
+[testenv:show-errors]
+setenv =
+    YATIML_TEST_ERROR_MESSAGES=1
+
+deps =
+    pytest
+    pytest-cov
+
+commands =
+    pytest
+
 [testenv:docs]
 description = Build documentation using Sphinx
 basepython = python3
