--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
 
 commands =
     mypy
-    pytest
+    pytest {posargs}
     pycodestyle yatiml tests
     cffconvert --validate
 
@@ -37,7 +37,7 @@ deps =
     pytest-cov
 
 commands =
-    pytest
+    pytest {posargs}
 
 [testenv:docs]
 description = Build documentation using Sphinx
